--- a/part-1/6-css-properties/styles.css
+++ b/part-1/6-css-properties/styles.css
@@ -1,1 +1,22 @@
 /* Add your CSS code below */
+a {
+  color: red;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.message__time {
+  font-size: 0.9rem;
+}
+
+.message.message--unread {
+  border-left: 0.5px solid blue;
+}
+
+.message:first-child {
+  opacity: 0.3;
+}
+
+.message__content {
+  height: 5rem;
+}
