--- a/part-2/12-justify-content/flexbox.css
+++ b/part-2/12-justify-content/flexbox.css
@@ -1,9 +1,26 @@
 .countries {
   display: flex;
 }
-
 .countries--second .country {
   padding: 0.5em;
 }
 
 /* Add your own CSS code below */
+
+.countries.countries--first {
+  justify-content: flex-end;
+}
+
+.countries.countries--second {
+  justify-content: space-evenly;
+}
+
+.countries.countries--third {
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.countries.countries--fourth {
+  flex-direction: column;
+  justify-content: space-evenly;
+}
