--- a/part-2/13-align-items/flexbox.css
+++ b/part-2/13-align-items/flexbox.css
@@ -2,3 +2,21 @@
   display: flex;
 }
 /* Add your own CSS code below */
+.countries.countries--first {
+  align-items: center;
+}
+
+.countries.countries--second {
+  flex-direction: row-reverse;
+  align-items: flex-end;
+}
+
+.countries.countries--third {
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.countries.countries--fourth {
+  flex-direction: column-reverse;
+  align-items: center;
+}
