--- a/part-2/15-align-self/flexbox.css
+++ b/part-2/15-align-self/flexbox.css
@@ -3,3 +3,41 @@
 }
 
 /* Add your own CSS code below */
+
+.country.country--ethiopia {
+  align-self: flex-end;
+}
+
+.countries.countries--tall.countries--second {
+  align-items: center;
+}
+.countries.countries--tall.countries--second .country.country--ethiopia {
+  align-self: flex-end;
+}
+
+.countries.countries--tall.countries--third .country.country--brazil {
+  align-self: flex-start;
+}
+.countries.countries--tall.countries--third .country.country--uganda {
+  align-self: flex-start;
+}
+.countries.countries--tall.countries--third .country.country--croatia {
+  align-self: flex-end;
+}
+.countries.countries--tall.countries--third .country.country--ethiopia {
+  align-self: flex-end;
+}
+.countries.countries--tall.countries--third .country.country--laos {
+  align-self: flex-end;
+}
+.countries.countries--tall.countries--fourth {
+  flex-direction: column;
+  align-items: flex-start;
+}
+.countries.countries--tall.countries--fourth .country.country--uganda {
+  align-self: center;
+}
+
+.countries.countries--tall.countries--fourth .country.country--ethiopia {
+  align-self: flex-start;
+}
