--- a/part-2/16-more-flexbox/flexbox.css
+++ b/part-2/16-more-flexbox/flexbox.css
@@ -3,3 +3,60 @@
 }
 
 /* Add your own CSS code below */
+.countries.countries--tall.countries--first {
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
+.countries.countries--tall.countries--second {
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.countries.countries--tall.countries--third {
+  align-items: flex-start;
+  justify-content: center;
+}
+.countries.countries--tall.countries--third .country.country--brazil {
+  align-self: flex-end;
+}
+
+.countries.countries--tall.countries--fourth {
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.countries.countries--tall.countries--fourth .country.country--ethiopia {
+  align-self: center;
+}
+.countries.countries--tall.countries--fourth .country.country--laos {
+  align-self: center;
+}
+
+.countries.countries--tall.countries--fifth {
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-evenly;
+}
+
+.countries.countries--tall.countries--fifth .country.country--uganda {
+  align-self: center;
+}
+
+.countries.countries--fifth .country:nth-of-type(1) {
+  order: 1;
+}
+.countries.countries--fifth .country:nth-of-type(2) {
+  order: 2;
+}
+.countries.countries--fifth .country:nth-of-type(3) {
+  order: 3;
+}
+
+.countries.countries--tall.countries--fifth .country.country--brazil {
+  order: 5;
+}
+.countries.countries--tall.countries--fifth .country.country--ethiopia {
+  order: 1;
+}
